--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openapi-typescript-codegen": "^0.29.0",
     "pinia": "^2.2.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
