--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "generate-openapi-user": "openapi --input ./spec/user.yaml --output ./services/user --useOptions --client axios"
+    "generate-openapi-user": "openapi --input ./spec/user.yaml --output ./services/user --useOptions --client axios",
+    "generate-openapi-post": "openapi --input ./spec/post.yaml --output ./services/post --useOptions --client axios"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.7.0",
